# opengl-renderer

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: .gitignore  Doxyfile
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
res/: .gitignore
res/shaders/: .gitignore  base.glsl  fragment.glsl  post_process_fragment.glsl  post_process_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
res/skybox/: skybox.glb
src/.cmake/: essential.cmake  utils.cmake
src/renderer/: CMakeLists.txt
src/renderer/src/: main.cpp
src/renderer_lib/: CMakeLists.txt
src/renderer_lib/src/: Application.cpp  Application.h  CameraProperties.cpp  GLFW.hpp  GLMath.hpp  Globals.hpp  ImGuiWindow.hpp  LightSource.cpp  LightSource.h  Mesh.cpp  Mesh.h  MeshImporter.cpp  ShaderProgramMacro.hpp
src/renderer_lib/src/camera/: Camera.cpp  Camera.h  CameraProperties.h
src/renderer_lib/src/import/: MeshImporter.cpp  MeshImporter.h  TextureImporter.cpp  TextureImporter.h
src/renderer_lib/src/math/: MathHelpers.hpp
src/renderer_lib/src/shader/: ShaderProgramMacro.hpp  ShaderUniformHelpers.hpp
src/renderer_lib/src/shapes/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  Plane.cpp  Plane.h
src/renderer_lib/src/window/: GLFW.hpp  ImGuiWindow.hpp
